# rona

./: .env.example  .gitignore  .rona.toml  CONTRIBUTING.md  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  build.rs  hooksmith.yaml  sonar-project.properties
.github/workflows/: SonarQube-Scan.yaml  build.yaml  dependencies.yaml  notify-homebrew-tap.yaml  publish  release.yaml  release_body.md  rust.yaml  tag-on-version-bump.yaml
completions/: rona.bash  rona.elv  rona.fish  rona.ps1  rona.zsh
src/: cli.rs  config.rs  errors.rs  git_related.rs  lib.rs  main.rs  my_clap_theme.rs  performance.rs  template.rs  utils.rs
src/git/: branch.rs  commit.rs  files.rs  mod.rs  remote.rs  repository.rs  staging.rs  status.rs  utils.rs
tests/: cli_tests.rs
