[package]
authors = ["Tom Planche <tomplanche@proton.me>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to help you with your git workflow."
edition = "2024"
keywords = ["cli", "git", "helper", "commands"]
license = "Apache-2.0 OR MIT"
name = "rona"
repository = "https://github.com/tomplanche/rona"
version = "1.1.4"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
dotenv = "0.15.0"
glob = "0.3.2"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.19.1"
