[package]
authors = ["Tom Planche <tomplanche@proton.me>"]
categories = ["command-line-utilities"]
description = "A simple CLI tool to help you with your git workflow."
edition = "2024"
homepage = "https://github.com/tomplanche/rona"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
keywords = ["cli", "git", "helper", "commands"]
license = "Apache-2.0 OR MIT"
name = "rona"
readme = "README.md"
repository = "https://github.com/tomplanche/rona"
version = "2.8.2"

[[bin]]
doc = true
name = "rona"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
console = "0.15.11"
dialoguer = "0.11.0"
glob = "0.3.3"
regex = "1.11.2"
thiserror = "2.0.16"
config = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0.17"
mockall = "0.13.1"
tempfile = "3.21.0"

[build-dependencies]
hooksmith = "1.13.0"
